<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SilinderActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/appSilinder_Label" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="207dp"
        android:contentDescription="Gambar Silinder"
        android:src="@drawable/shape_cylinder_1024x1024" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/JariJariSilinder_Label"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editJariJari"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginRight="30dp"
                android:inputType="number" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/TinggiSilinder_Label"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTinggi"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@color/colorCat"
                    android:padding="5dp"
                    android:text="@string/LingkaranCat_Label"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    android:layout_marginBottom="5dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/SilinderLuas"
                        android:layout_weight="1"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/txtLuasLingkaran"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/ZeroLabel"
                        android:textColor="@color/colorAccent"
                        android:layout_weight="1"
                        android:textStyle="bold"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/SilinderKeliling"
                        android:layout_weight="1"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/txtKelilingLingkaran"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/ZeroLabel"
                        android:textColor="@color/colorAccent"
                        android:layout_weight="1"
                        android:textStyle="bold"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:padding="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/SilinderCat_Label"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    android:background="@color/colorCat"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/SilinderVolume"
                        android:layout_weight="1"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/txtVolumeSilinder"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/ZeroLabel"
                        android:textColor="@color/colorAccent"
                        android:layout_weight="1"
                        android:textStyle="bold"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        </LinearLayout>


    </LinearLayout>
</LinearLayout>